youfull/objects/Business_Plan_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>AVG_ACTVTY_PCT__c</fullName>
        <inlineHelpText>Annual market average activity rate (%)</inlineHelpText>
        <label>Average Activity Rate [%]</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_DISCNT_PCT__c</fullName>
        <inlineHelpText>Average campaign discount percentage (%) applied on the order. It is an annual market campaign average.</inlineHelpText>
        <label>Average Discount Rate [%]</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_EXEC_COMMSN_PCT__c</fullName>
        <inlineHelpText>Campaign average executive commission rate (%)</inlineHelpText>
        <label>Exec Avg Comsn Rate [%]</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_EXEC_TUS__c</fullName>
        <inlineHelpText>Campaign average Executive Total Unit Sales (amount)</inlineHelpText>
        <label>Exec Avg Total Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_10_G1_DSTRBTN_PCT__c</fullName>
        <inlineHelpText>Campaign average distribution sales for title level 10. G1 netsales contribution on 3 generations.</inlineHelpText>
        <label>Avg Sales Dstbn G1 [%] - title lvl10</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_10_G1_UNIT_COMMSN_PCT__c</fullName>
        <inlineHelpText>Campaign average commission rate (%) applied on G1 for title level 10.</inlineHelpText>
        <label>Avg Unit Comsn Rts G1 [%]-title lvl10</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_10_G2_DSTRBTN_PCT__c</fullName>
        <inlineHelpText>Campaign average distribution sales for title level 10. G2 netsales contribution on 3 generations.</inlineHelpText>
        <label>Avg Sales Dstbn G2 [%] - title lvl10</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_10_G2_UNIT_COMMSN_PCT__c</fullName>
        <inlineHelpText>Campaign average commission rate (%) applied on G2 for title level 10.</inlineHelpText>
        <label>Avg Unit Comsn Rts G2 [%]-title lvl10</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_10_G3_DSTRBTN_PCT__c</fullName>
        <inlineHelpText>Campaign average distribution sales for title level 10. G3 netsales contribution on 3 generations.</inlineHelpText>
        <label>Avg Sales Dstbn G3 [%] - title lvl10</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_10_G3_UNIT_COMMSN_PCT__c</fullName>
        <inlineHelpText>Campaign average commission rate (%) applied on G3 for title level 10.</inlineHelpText>
        <label>Avg Unit Comsn Rts G3 [%]-title lvl10</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_1_ADDTNL_SLS__c</fullName>
        <inlineHelpText>Average additional unit sales gained when Sales Leader gets promoted to title level 1 (UL).</inlineHelpText>
        <label>Avg addl Unit Sales-title lvl1 (UL)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_2_ADDTNL_SLS__c</fullName>
        <inlineHelpText>Average additional unit sales gained when Sales Leader gets promoted to title level 2 (AUL).</inlineHelpText>
        <label>Avg addl Unit Sales-title lvl2</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_LVL_3_ADDTNL_SLS__c</fullName>
        <inlineHelpText>Average additional unit sales gained when Sales Leader gets promoted to title level 3 (EUL).</inlineHelpText>
        <label>Avg addl Unit Sales-title lvl3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_SIZE__c</fullName>
        <inlineHelpText>Annual market average Rep award sales.</inlineHelpText>
        <label>Average Order Size</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_PRSNL_QLFR_APPT_PCT__c</fullName>
        <inlineHelpText>Annual market campaign average qualified appoitment rate (%). The percentage of appointments that qualified from total appointments.</inlineHelpText>
        <label>Avg Qlified Prsnl Appntment Rate</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_RMVL_PCT__c</fullName>
        <inlineHelpText>Annual market average removal rate (%).</inlineHelpText>
        <label>Average Removal Rate [%]</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR_90DBP_CNT__c</fullName>
        <inlineHelpText>Number of campaigns covering 90 days</inlineHelpText>
        <label>90 days # Campaigns</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_LDRSHP_TITL_CD__c</fullName>
        <label>Abbreviated title name</label>
        <referenceTo>Leader_Title__c</referenceTo>
        <relationshipLabel>Business Plan Parameters</relationshipLabel>
        <relationshipName>Business_Plan_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVL_1_PRMTN_BONUS_AMT__c</fullName>
        <label>UL Promotion Bonus</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVL_2_PRMTN_BONUS_AMT__c</fullName>
        <inlineHelpText>Amount paid for the promotion to the 2nd title level (AUL)</inlineHelpText>
        <label>Promotion Bonus Title Level 2 (AUL)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVL_3_PRMTN_BONUS_AMT__c</fullName>
        <inlineHelpText>Amount paid for the promotion to the 3rd title level (EUL)</inlineHelpText>
        <label>Promotion Bonus Title Level 3 (EUL)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Id__c</fullName>
        <label>Market Id</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Business Plan Parameters</relationshipLabel>
        <relationshipName>Business_Plan_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPA_BONUS_AMT__c</fullName>
        <label>Qualified Personal Apontments Bonus</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Plan Parameter</label>
    <nameField>
        <label>Business Plan Parameter  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Plan Parameters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>